Update ContainerApiMockTest.java